--- a/LayoutCSS.css
+++ b/LayoutCSS.css
@@ -13,9 +13,9 @@
 
 .ContainerTwoTitleHolder {
     width:100%;
-    height:15%;
+    /* height:15%; */
     background-color:#CFCFCF;
-    border:none;   
+    border:none;
 }
 
 .ContainerThreeTitle {
@@ -28,7 +28,7 @@
 .title1 {
     text-align: center;
     font-family:"Courier New", Courier, monospace;
-    font-size:8vh;
+    font-size:4.5vw;
     text-shadow: 4px 4px 10.4px black;
     white-space: pre;
     
